--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Falls Assessment Tool</title>
 <link rel="stylesheet" href="style.css" />
-<link rel="manifest" href="manifest.json" />
-<meta name="theme-color" content="#00703c" />
 <script defer src="app.js"></script>
 </head>
 <body>
@@ -28,7 +26,7 @@
       <h2>FRAT Assessment</h2>
       <div id="frat-content"></div>
       <button id="frat-calculate">Calculate FRAT</button>
-      <div id="frat-score-display" class="risk-result"></div>
+      <div id="frat-result" class="risk-result"></div>
     </section>
 
     <section id="obs-news2">
@@ -65,7 +63,6 @@
 
   <footer>
     <p>© 2025 Falls Assessment Tool</p>
-    <p>Created By Aaron Ball CFR</p>
   </footer>
 </body>
 </html>
