--- a/index.html
+++ b/index.html
@@ -1,80 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Falls Assessment Tool</title>
-<link rel="stylesheet" href="style.css" />
-<link rel="manifest" href="manifest.json" />
-<meta name="theme-color" content="#00703c" />
-<script defer src="app.js"></script>
-
-<!-- Libraries -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Falls Assessment Tool</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#00703c" />
+  <script defer src="app.js"></script>
 </head>
 <body>
-  <header class="banner">
-    <img src="nhs.png" alt="NHS Logo" class="logo-left" />
+  <header class="app-header">
+    <img src="icon-192.png" alt="SECamb Crest" class="logo">
     <h1>Falls Assessment Tool</h1>
-    <img src="secamb.png" alt="SECamb Logo" class="logo-right" />
+    <span class="version">v1.0 – Updated 16 June 2025</span>
   </header>
 
-  <main>
-    <!-- ISTUMBLE -->
-    <section id="istumble">
-      <h2>ISTUMBLE Assessment</h2>
-      <div id="istumble-content"></div>
-      <button id="istumble-evaluate">Evaluate ISTUMBLE</button>
-      <div id="istumble-result" class="risk-result"></div>
+  <main id="app">
+
+    <!-- Patient Details Section -->
+    <section id="patient-info" class="card">
+      <h2>Patient Details</h2>
+      <label>CFR Call Sign <input type="text" id="cfr-sign" placeholder="e.g. CR-0386" /></label>
+      <label>ESR Number <input type="text" id="esr-number" /></label>
+      <label>Date <input type="date" id="assessment-date" /></label>
+      <label>Time <input type="time" id="assessment-time" /></label>
+      <label>Incident Number <input type="text" id="incident-number" /></label>
+      <label>Patient Sex
+        <select id="patient-sex">
+          <option value="">Please Select</option>
+          <option value="Male">Male</option>
+          <option value="Female">Female</option>
+          <option value="Other">Other</option>
+        </select>
+      </label>
+      <label>Patient Age <input type="number" id="patient-age" /></label>
     </section>
 
-    <!-- FRAT -->
-    <section id="frat">
-      <h2>FRAT Assessment</h2>
+    <!-- Summary Card -->
+    <section id="summary-card" class="card hidden">
+      <h2>🧾 Patient Summary</h2>
+      <div id="summary-content"></div>
+    </section>
+
+    <!-- ISTUMBLE Section -->
+    <section id="istumble" class="card">
+      <h2>🧠 ISTUMBLE Assessment <button class="help-btn" onclick="showHelp('istumble')">?</button></h2>
+      <div id="istumble-content"></div>
+      <div id="istumble-result"></div>
+    </section>
+
+    <!-- FAST Test -->
+    <section id="fast" class="card">
+      <h2>⚡ FAST Test <button class="help-btn" onclick="showHelp('fast')">?</button></h2>
+      <label>Face Droop
+        <select id="fast-face">
+          <option value="">Select</option>
+          <option value="Yes">Yes</option>
+          <option value="No">No</option>
+        </select>
+      </label>
+      <label>Arm Weakness
+        <select id="fast-arm">
+          <option value="">Select</option>
+          <option value="Yes">Yes</option>
+          <option value="No">No</option>
+        </select>
+      </label>
+      <label>Speech Difficulty
+        <select id="fast-speech">
+          <option value="">Select</option>
+          <option value="Yes">Yes</option>
+          <option value="No">No</option>
+        </select>
+      </label>
+      <div id="fast-alert" class="risk-result"></div>
+    </section>
+
+    <!-- OBS Section -->
+    <section id="obs" class="card">
+      <h2>🩺 OBS / NEWS2 <button class="help-btn" onclick="showHelp('obs')">?</button></h2>
+      <div id="obs-inputs"></div>
+      <label><input type="checkbox" id="normal-range-toggle" /> Use patient’s normal ranges</label>
+      <label>SBP Post Lift <input type="time" id="sbp-time" /></label>
+      <div id="news2-score" class="risk-result"></div>
+    </section>
+
+    <!-- FRAT Section -->
+    <section id="frat" class="card">
+      <h2>📊 FRAT Assessment <button class="help-btn" onclick="showHelp('frat')">?</button></h2>
       <div id="frat-content"></div>
-      <button id="frat-calculate">Calculate FRAT</button>
       <div id="frat-result" class="risk-result"></div>
     </section>
 
-    <!-- OBS & NEWS2 -->
-    <section id="obs-news2">
-      <h2>Observations (OBS) & NEWS2</h2>
-      <div id="obs-content"></div>
-      <div id="news2-result" class="risk-result"></div>
+    <!-- Medicines Reference -->
+    <section id="meds" class="card hidden">
+      <h2>💊 Blood Thinners Reference</h2>
+      <ul id="blood-thinners-list"></ul>
     </section>
 
-    <!-- Summary -->
-    <section id="summary">
-      <h2>Assessment Summary</h2>
-      <button id="generate-email">Generate Summary</button>
+    <!-- Settings Panel -->
+    <section id="settings-panel" class="card hidden">
+      <h2>⚙️ Settings</h2>
+      <label>Theme:
+        <select id="theme-selector">
+          <option value="green">Ambulance Green</option>
+          <option value="red">Rescue Red</option>
+        </select>
+      </label>
+      <label>Font Style:
+        <select id="font-selector">
+          <option value="standard">Standard</option>
+          <option value="bionic">Bionic Reading</option>
+          <option value="sans">Sans Serif</option>
+          <option value="mono">Monospace</option>
+        </select>
+      </label>
+      <label><input type="checkbox" id="dark-mode-toggle" /> Enable Dark Mode</label>
+      <button id="reset-permissions">Reset All Data & Permissions</button>
+    </section>
+
+    <!-- Section Tooltips -->
+    <section id="help-box" class="card hidden">
+      <h3>ℹ️ Section Info</h3>
+      <div id="help-content"></div>
+      <button onclick="closeHelp()">Close</button>
+    </section>
+
+    <!-- Export Summary -->
+    <section class="card">
+      <button id="summaryBtn">📄 Export as PDF</button>
     </section>
   </main>
 
-  <!-- AMTS Modal -->
-  <div id="amts-modal" style="display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; overflow:auto; background-color:rgba(0,0,0,0.5);">
-    <div style="background:#fff; margin:10% auto; padding:20px; border-radius:10px; max-width:400px; position:relative;">
-      <h3>AMTS - Abbreviated Mental Test Score</h3>
-      <ol>
-        <li>Age: "What is your age?"</li>
-        <li>Time: "What is the time to the nearest hour?"</li>
-        <li>Address: Provide an address for the patient to repeat, ask the patient to recall it at the end of the test. For example, "42 West Street"</li>
-        <li>Year: "What is the Current year?"</li>
-        <li>Place: "What is the name of this place?" or "What is your house number?"</li>
-        <li>Person Recognition: "Can you recognize these two people?" (presenting pictures or pointing out individuals like a family member or carer)</li>
-        <li>Date of Birth: "What is your date of birth?" (day and month are sufficient)</li>
-        <li>World War I: "In what year did World War I begin?" ans: 1914</li>
-        <li>Monarch: "Who is the current monarch?"</li>
-        <li>Counting Backwards: "Please count backwards from 20 to 1."</li>
-      </ol>
-      <button id="close-amts" style="margin-top:15px; background:#00703c; color:#fff; border:none; padding:8px 15px; border-radius:5px; cursor:pointer;">Close</button>
-    </div>
-  </div>
-
-  <footer>
-    <p>© 2025 Falls Assessment Tool</p>
-    <p>Created By Aaron Ball CFR</p>
+  <!-- Sticky Nav Footer -->
+  <footer class="sticky-footer">
+    <button onclick="toggleSection('settings-panel')">☰ Settings</button>
+    <button onclick="toggleSection('meds')">💊 Medicines</button>
+    <button onclick="toggleSection('summary-card')">🧾 Patient Card</button>
+    <button onclick="resetForm()">🗑️ Reset</button>
   </footer>
 </body>
 </html>
+
+
