--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SECamb CFR Falls Assessment</title>
+  <title>Falls Assessment Tool</title>
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="style.css" />
   <script defer src="app.js"></script>
@@ -34,7 +34,7 @@
       <label>Patient Age <input type="number" id="patient-age" min="0"/></label>
     </section>
 
-    <!-- OBS section, ISTUMBLE, FAST, FRAT and other sections are added dynamically by JS -->
+    <!-- Placeholder for dynamically generated sections like OBS, ISTUMBLE, FAST, FRAT -->
     <div id="dynamic-sections"></div>
   </main>
 
@@ -44,7 +44,8 @@
     <button id="settingsBtn">☰ Settings</button>
   </footer>
 
-  <!-- Modals and views go here -->
+  <!-- Dynamic View for Summary, Settings, Medicines -->
   <div id="card-view" class="hidden"></div>
 </body>
 </html>
+
