--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Falls Assessment App</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="icons/icon-192.png" type="image/png" />
+  <link rel="icon" href="icon-192.png" type="image/png" />
 </head>
 <body>
   <header class="app-header">
