--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <header class="app-header">
-    <img src="secamb_logo.png" class="logo" alt="SECamb Logo">
+    <img src="secamb.png" class="logo" alt="SECamb Logo">
     <h1 class="app-title">Falls Assessment Tool</h1>
-    <img src="nhs_logo.png" class="logo" alt="NHS Logo">
+    <img src="nhs.png" class="logo" alt="NHS Logo">
   </header>
 
   <main>
